tfes3.css
/* ... */
option {
  padding-right: 0.5em;
}
#name, #email, #message, #website{
  width: 455px;
}
input#button {
  position: absolute;
  right: 10px;
  bottom: 8px;
  font-family: 'FontAwesome';
  height: 30px;
  margin: 0;
  padding: 2px 3px;
  color: #666;
  background: none;
  border: none;
}
input#button:hover {
  color: #000;
}


/* ---------------------------------------------------------------------
   PAGE LAYOUT
   --------------------------------------------------------------------- */
#wrap {
  position: relative;
  margin: 0px auto 30px auto;
  text-align: left;
  min-width: 300px;
}
#main-col {
  background: url(../images/header.png) top center no-repeat #4c798d;
  padding-bottom: 10px;
}
#main-col video, #bg-overlay {
  position: absolute;
  left: 50%;
  transform: translate(-50%, 0);
  z-index: 0;
  width: 1100px;
  max-width: 1100px;
  height: 550px;
}
@media (max-width: 1100px) {
  #main-col video, #bg-overlay {
    width: 100%;
    max-width: 100%;
    object-fit: cover;
  }
}
#main-col-inner {
  position: relative; 
  z-index: 4;
  max-width: 952px;
  margin: 0 auto;
}
@media (max-width: 991px) {
  #main-col-inner {
    max-width: 100%;
  }
}
#nav-below {
  padding: 20px 0 0 0;
}
#nav-below ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 10px 0;
  padding: 0;
  color: #fff;
}
#nav-below ul li {
  padding: 10px 20px;
  width: 20%;
}
#nav-below ul li a {
  color: #fff;
}
#nav-below ul li a i, #nav-below ul li a span {
  font-size: 21px;
}
#nav-below ul li a:hover {
  text-decoration: none;
  color: #a0b8c6;
}
#nav-below ul li a span {
  font-family: 'Lobster Two';
  margin-left: 10px;
}
#nav-below ul li p {
  line-height: 16px;
  font-weight: 600;
  padding-left: 4px;
  padding-right: 4px;
}
@media (min-width: 501px) {
  #nav-below-mobile {
    display: none;
  }
}
@media (max-width: 991px) {
  #nav-below ul li {
    width: 40%;
  }
}
@media (max-width: 500px) {
  #nav-below {
    display: none;
  }
  #nav-below-mobile {
    padding: 1px 0px;
  }
  #nav-below-mobile ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 10px 0;
    padding: 0;
  }
  #nav-below-mobile ul li {
    background-color: #fff;
    margin: 3px 20px;
    padding: 15px 15px 10px 15px;
    border-radius: 5px;
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
    vertical-align: middle;
    width: 100%;
    color: #4c798e;
  }
  #nav-below-mobile ul li a:hover {
    text-decoration: none;
    color: #a0b8c6;
  }
  #nav-below-mobile ul li a i {
    color: #4c798e;
    font-size: 21px;
  }
  #nav-below-mobile ul li a span {
    font-family: 'Lobster Two';
    font-size: 21px;
    margin-left: 10px;
    color: #666;
  }
  #nav-below-mobile ul li a span:hover {
    text-decoration: none;
    color: #a0b8c6;
  }
  #nav-below-mobile ul li p {
    display: none;
    position: absolute;
    background-color: #fff;
    color: #333;
    font-weight: 600;
    line-height: 16px;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.4);
    right: 70px;
    margin-top: -23px;
    width: 50%;
  }
  #nav-below-mobile ul li .link-description::after {
    content: "";
    font-family: "FontAwesome";
    font-size: 21px;
    line-height: 1px;
    display: block !important;
    position: absolute;
    right: 35px;
    margin-top: -14px;
  }
  #nav-below-mobile ul li .link-description:hover::after {
    color: #a0b8c6;
  }
  #nav-below-mobile ul li .link-description:hover p {
    display: inline;
  }
}
#content {
  position: relative;
  z-index: 2;
  background-color: #fff;
  clear: both;
  float: left;
  width: 100%;
  padding: 25px 0 60px 0;
  box-shadow: 0px -6px 12px rgba(0, 0, 0, 0.2);
}
#content-columns {
  width: 952px;
  margin: 0 auto;
}
@media (max-width: 991px) {
  #content-columns {
    width: 100%;
  }
}
@media (max-width: 500px) {
  #content {
    padding-top: 85px;
  }
}
#header {
  position: relative;
  max-width: 952px;
  height: 100px;
  color: #fff;
  padding: 0;
  margin: 0 0 30px 0;
}
@media (max-width: 500px) {
  #header {
    height: 62px;
    max-width: 100%;
    width: 100%;
  }
}
#header img {
  border-width: 0px;
  padding: 0px;
  position: absolute;
  bottom: 0px;
  overflow: hidden;
}

#logo_img {
  position: relative;
  top: 20px;
  left: 35px;
  width: 100px;
  height: 100px;
  image-rendering: -webkit-optimize-contrast;
}

#logo_txt {
  position: relative;
  top: 20px;
  left: 50%;
  transform: translate(-50%, 0);
  width: 200px;
  height: 100px;
  image-rendering: -webkit-optimize-contrast;
}

@media (max-width: 500px) {
  #logo_img {
    left: 20px;
    top: 15px;
    width: 60px;
    height: 60px;
  }
  #logo_txt {
    top: 15px;
    width: 120px;
    height: 60px;
  }
}


/* Navigation: */
nav {
  clear: both;
  padding: 10px 0;
  margin: 0;
  width: 100%;
  height: 50px;
}
nav ul {
  position: relative;
  z-index: 3;
  float: left;
  list-style: none;
  margin: 2px 0 0 0;
  height: 45px;
  padding: 10px;
}
nav ul li {
  float: left;
  margin: 0;
  padding: 0 5px;
}
nav ul li a,
nav ul li a:visited {
  float: left;
  margin: 0;
  padding: 0 17px 0 0px;
  color: #fff;
  text-decoration: none;
}
nav ul li a:hover,
nav ul li a:active {
  color: #a0b8c6;
  text-decoration: none;
}
@media (max-width: 500px) {
  nav ul {
    position: absolute;
    top: 414px;
    width: 100%;
    display: flex;
    justify-content: center;
    margin: 0;
    padding: 10px 0;
    border-bottom: 1px solid #ddd;
  }
  nav ul li a,
  nav ul li a:visited {
    color: #4c798e;
    padding: 10px;
  }
}

/* Mobile status notice: */

#statusnotice-mobile {
  border-bottom: 1px dotted #aaa;
  padding-bottom: 20px;
  margin-bottom: 10px;
}
#statusnotice-mobile a {
  font-family: "Oswald", sans-serif;
  color: #666;
  font-size: 16px;
}
#statusnotice-mobile a:hover {
  color: #000;
  text-decoration: none;
}
#statusnotice-mobile span {
  font-family: "Lobster Two", sans-serif;
  font-size: 16px;
  color: #4c798e;
}
/* ... */

